--- a/project-3/src/index.css
+++ b/project-3/src/index.css
@@ -7,8 +7,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  
 }
