--- a/project-3/src/App.css
+++ b/project-3/src/App.css
@@ -36,4 +36,64 @@
     transform: rotate(360deg);
   }
 }
+body{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background: url(paperBackground.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
+
+.links{
+      float: right;
+      display: inline;
+      margin-right: 30px;
+      font-weight: bold;
+      font-size: 18px;
+      font-family: cursive;
+      color: rgb(255,255,255);
+      text-decoration: none;
+}
+
+.links:hover {
+  color: yellow;
+  text-decoration: none;
+}
+
+#postButton{
+  width: 24px;
+  height: 24px;
+  background: rgb(81, 255, 0);
+  border: 1px solid;
+  border-radius: 5px;
+}
+
+.inputField{
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+  background: red;
+  color: white;
+  font-size: 15px;
+  border-radius: 5px;
+  font-family: cursive;
+}
+
+#submit{
+        width: 225px;
+        height: 45px;
+        background: rgb(81, 255, 0);
+        text-align: center;
+        font-size: 150%;
+        padding: 20px 5px 5 px;
+        border: 1px solid;
+        border-radius: 5px;
+        box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.5), 0px 2px 0px 0px rgb(32, 185, 12), inset 0px 1px 0px 0px rgba(255,255,255,0.5);
+        cursor: pointer;
+        font-family: cursive;
+        padding-bottom: 5px;
+}
